fixed on safari the height issue of the image

--- a/style.css
+++ b/style.css
@@ -83,6 +83,7 @@ body {
   background-color: white;
   width: min(600px, calc(100% - (2 * var(--spacing-3))));
   border-radius: 10px 10px 0 0;
+  height: min-content;
 
   @media (min-width: 600px) {
     margin-block: var(--spacing-6);
@@ -91,10 +92,12 @@ body {
     grid-template-columns: 1fr 1fr;
   }
 
+  & picture {
+    display: block;
+  }
   & img {
     border-radius: 10px 10px 0 0;
     object-fit: cover;
-    height: 100%;
 
     @media (min-width: 600px) {
       border-radius: 10px 0 0 10px;
